README.MD added
-added led matrix demo
-added recorder demo
-added README.MD

--- a/src/package.json
+++ b/src/package.json
@@ -1,42 +1,1 @@
-{
-	"name": "Glue",
-	"main": "core/index.html",
-	"description":"Add description",
-	"version":"0.0.500",
-	"js-flags": "--harmony",
-	"single-instance": true,
-	"no-edit-menu": true,
-	"webkit": {
-		"plugin": true
-	},
-	"repository": {
-    "type": "git",
-    "url": "https://github.com/dongzhi/glue.git"
-  },
-  "bugs": {
-    "url": "https://github.com/dongzhi/glue/issues"
-  },
-	"chromium-args" : "--enable-smooth-scrolling --disable-accelerated-video --disable-webgl --enable-webaudio --ignore-gpu-blacklist --force-compositing-mode --remote-debugging-port=10888 --harmony",
-	"window": {
-			"icon": "core/images/icon.png",
-			"width": 704,
-			"height": 400,
-			"min_width": 704,
-			"min_height": 400,
-			"position": "center",
-			"show": false,
-			"toolbar": false,
-			"frame": true
-	},
-	"dependencies": {
-    "fs-plus": "^2.6",
-		"optimist": "0.4.0",
-		"johnny-five": ">=0.8.50",
-    "underscore-plus": "^1.6.6",
-		"color-string":">=0.3.0",
-		"socket.io":"latest",
-		"express":"latest",
-		"body-parser":"latest",
-		"qr-image":">=0.3.1"
-  }
-}
+{"name":"Glue","main":"core/index.html","description":"Add description","version":"0.159.0","js-flags":"--harmony","single-instance":true,"no-edit-menu":true,"webkit":{"plugin":true},"repository":{"type":"git","url":"https://github.com/dongzhi/glue.git"},"bugs":{"url":"https://github.com/dongzhi/glue/issues"},"chromium-args":"--enable-smooth-scrolling --disable-accelerated-video --disable-webgl --enable-webaudio --ignore-gpu-blacklist --force-compositing-mode --remote-debugging-port=10888 --harmony","window":{"icon":"core/images/icon.png","width":704,"height":400,"min_width":704,"min_height":400,"position":"center","show":false,"toolbar":false,"frame":true},"dependencies":{"fs-plus":"^2.6","optimist":"0.4.0","johnny-five":">=0.8.50","underscore-plus":"^1.6.6","color-string":">=0.3.0","socket.io":"latest","express":"latest","body-parser":"latest","qr-image":">=0.3.1"}}
