--- a/package.json
+++ b/package.json
@@ -1,14 +1,1 @@
-{
-	"name": "Glue",
-	"description":"Add description",
-	"version":"0.0.500",
-	"nw-version":"0.12.0",
-	"repository": {
-    "type": "git",
-    "url": "https://github.com/dongzhi/glue.git"
-  },
-  "bugs": {
-    "url": "https://github.com/dongzhi/glue/issues"
-  },
-  "author": "Dongzhi Xia"
-}
+{"name":"Glue","description":"Add description","version":"0.159.0","nw-version":"0.12.0","repository":{"type":"git","url":"https://github.com/dongzhi/glue.git"},"bugs":{"url":"https://github.com/dongzhi/glue/issues"},"author":"Dongzhi Xia"}
